add ref links & og_image

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 <div>
                     注意事項：
                     <ul>
-                        <li><a href="https://religion.moi.gov.tw/" target="_blank">資料來源</a></li>
+                        <li><a href="https://foodlover.tw/" target="_blank">資料來源</a></li>
+                        <li><a href="https://github.com/www10177/foodlover_data" target="_blank">資料來源</a></li>
                     </ul>
                 </div>
             </div>
