--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 </div>
                 <div class="btn-group-vertical" role="group" style="width: 100%;">
                     <a href="https://github.com/kiang/foodlover/issues" target="_blank" class="btn btn-primary btn-lg btn-block">網站問題反應</a>
-                    <a href="https://www.facebook.com/k.olc.tw/posts/1927095310797256" target="_blank" class="btn btn-primary btn-lg btn-block">FB 討論</a>
-                    <a href="https://link.medium.com/KefoPYtA3jb" target="_blank" class="btn btn-primary btn-lg btn-block">Medium 討論</a>
+                    <a href="https://www.facebook.com/k.olc.tw/posts/1929916177181836" target="_blank" class="btn btn-primary btn-lg btn-block">FB 討論</a>
+                    <a href="https://link.medium.com/iumKjrc89jb" target="_blank" class="btn btn-primary btn-lg btn-block">Medium 討論</a>
                 </div>
             </div>
             <div class="sidebar-pane" id="book">
