--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
     </div>
 
     <div id="map" class="sidebar-map"></div>
-    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="jsn/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
         crossorigin="anonymous"></script>
-    <script src="js/ol.js" type="text/javascript"></script>
-    <script src="js/ol5-sidebar.min.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="jsn/ol.js" type="text/javascript"></script>
+    <script src="jsn/ol5-sidebar.min.js" type="text/javascript"></script>
+    <script src="jsn/main.js" type="text/javascript"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80817009-1"></script>
     <script>
