--- a/index.html
+++ b/index.html
@@ -108,6 +108,21 @@
                     <a href="#" class="btn btn-primary btn-lg btn-block" id="btn-geolocation">回到目前位置</a>
                 </div>
                 <hr />
+                <p>支付方式過濾：</p>
+                <div class="btn-group-vertical">
+                    <a href="#" class="btn btn-primary btn-lg btn-block filter-payment" data-payment="">全部顯示</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="LINE Pay Money">LINE Pay Money</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="台灣 PAY">台灣 PAY</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="街口支付">街口支付</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="一卡通">一卡通</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="愛金卡">愛金卡</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="悠遊付">悠遊付</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="歐付寶">歐付寶</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="悠遊卡">悠遊卡</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="PI">PI</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="創科">創科</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="玉山銀行">玉山銀行</a>
+                </div>
             </div>
             <div class="sidebar-pane" id="fb">
                 <div class="fb-page" data-href="https://www.facebook.com/k.olc.tw/" data-tabs="timeline"
