restore the map to f3d02f5e2b1d54a1a497b7ae9c9ee586e0ee0b30

--- a/index.html
+++ b/index.html
@@ -111,22 +111,17 @@
                 <p>支付方式過濾：</p>
                 <div class="btn-group-vertical">
                     <a href="#" class="btn btn-primary btn-lg btn-block filter-payment" data-payment="">全部顯示</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="LINE PAY">LINE PAY</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="LINE Pay Money">LINE Pay Money</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="台灣 PAY">台灣 PAY</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="街口支付">街口支付</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="悠遊付">悠遊付</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="一卡通">一卡通</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="愛金卡">愛金卡</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="悠遊付">悠遊付</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="歐付寶">歐付寶</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="悠遊卡">悠遊卡</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="愛金卡">愛金卡</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="PI">PI</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="創科">創科</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="玉山銀行">玉山銀行</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="永豐銀行">永豐銀行</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="APPLEPAY">APPLEPAY</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="線上刷卡">線上刷卡</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="信用卡">信用卡</a>
-                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="富邦銀行">富邦銀行</a>
                 </div>
             </div>
             <div class="sidebar-pane" id="fb">
