add category/area filters

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <hr />
                 <p>支付方式過濾：</p>
-                <div class="btn-group-vertical">
+                <div>
                     <a href="#" class="btn btn-primary btn-lg btn-block filter-payment" data-payment="">全部顯示</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="信用卡">信用卡</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="台灣pay">台灣pay</a>
@@ -124,6 +124,17 @@
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="歐付寶">歐付寶</a>
                     <a href="#" class="btn btn-secondary btn-lg btn-block filter-payment" data-payment="愛金卡">愛金卡</a>
                 </div>
+                <p>商店類型過濾：</p>
+                <div>
+                    <a href="#" class="btn btn-primary btn-lg btn-block filter-category" data-category="">全部顯示</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-category" data-category="餐飲">餐飲</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-category" data-category="糕餅">糕餅</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-category" data-category="夜市/市場攤販">夜市/市場攤販</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-category" data-category="百貨美食街">百貨美食街</a>
+                    <a href="#" class="btn btn-secondary btn-lg btn-block filter-category" data-category="觀光工廠">觀光工廠</a>
+                </div>
+                <p>行政區過濾：</p>
+                <div id="filterAreas"></div>
             </div>
             <div class="sidebar-pane" id="fb">
                 <div class="fb-page" data-href="https://www.facebook.com/k.olc.tw/" data-tabs="timeline"
