--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
     </div>
 
     <div id="map" class="sidebar-map"></div>
+    <div style="position: fixed; bottom: 0px; left: 0px;">
+        <a href="https://facebook.com/k.olc.tw/" target="_blank" class="btn btn-lg alert-primary">北中西區台南市議員參選人江明宗 製作</a>
+    </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
